# physync

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/include/: msgpack.hpp
client/src/: main.cpp
client/src/network/: network_manager.cpp  network_manager.hpp  time_syncer.cpp  time_syncer.hpp
client/src/renderer/: cube_renderer.cpp  cube_renderer.hpp  mesh_renderer.cpp  mesh_renderer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
client/src/world_state/: cube.hpp  world_state.hpp
include/glad/: glad.h
server/: CMakeLists.txt
server/include/reactphysics3d/engine/: PhysicsCommon.h
server/src/: fixed_callback.hpp  fixed_loop.hpp  main.cpp  world_manager.cpp  world_manager.hpp
server/src/network/: network_manager.cpp  network_manager.hpp
shared/: CMakeLists.txt
shared/client_server_shared/: network_messages.hpp  utils.hpp
src/: main.cpp
src/renderer/: cube_renderer.cpp  renderer.cpp  renderer.hpp
